Fixes spacing on error messages

--- a/public/LogIn/login.css
+++ b/public/LogIn/login.css
@@ -2,6 +2,12 @@ main {
   padding: 100px;
 }
 
+.errormsg {
+  color: red;
+  font-weight: bold;
+  margin-top: 0.8em;
+}
+
 #loginform {
   display: flex;
   flex-direction: column;
